# chirun

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  chirun_schema.1.json  makecourse.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
chirun/: .flake8  __init__.py  chirun  chirun.sty  cli.py  filter.py  html_filter.py  item.py  latex.py  localisation.py  makecourse  makecourse.sty  process.py  render.py  theme.py
chirun/markdownRenderer/: __init__.py  arithmatex.py
chirun/notedown/: __init__.py  main.py  notedown.py  pandocattributes.py
chirun/plasTeXRenderer/: Alignment.jinja2s  Bibliography.jinja2s  Boxes.jinja2s  Config.py  Lists.jinja2s  Math.jinja2s  Misc.jinja2s  Pictures.jinja2s  __init__.py  embed.jinja2s  graphicx.jinja2s  knitr.jinja2s  macros.jinja2s  qrcode.jinja2s
chirun/plastex/: __init__.py  comment.py  verbatim.py  xcolor.py
codemirror-element/: Makefile  package.json  runnable-code.mjs
docs/: Makefile  requirements-docs.txt
docs/source/: api.rst  conf.py  content_items.rst  demo.rst  index.rst  installing_chirun_lti.rst  licensing.rst  themes.rst
makeCourse/: .flake8  .latex.py.swp  .makecourse.swp  __init__.py  decktape.py  filter.py  hackmd.py  item.py  latex.py  makecourse  makecourse.sty  markdown.py  nodedown.py  oembed.py  pandoc.py  plastex.py  process.py  render.py  slides.py  theme.py
makeCourse.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
makeCourse/markdownRenderer/: __init__.py  arithmatex.py
makeCourse/misc/: main.jinja2  websetup.sty
makeCourse/plasTeXRenderer/: Arrays.jinja2s  Bibliography.jinja2s  Boxes.jinja2s  Config.py  Crossref.jinja2s  Floats.jinja2s  Lists.jinja2s  Math.jinja2s  Sectioning.jinja2s  Thms.jinja2s  __init__.py  beamer.jinja2s  collapse.jinja2s  embed.jinja2s  graphicx.jinja2s  tikz3dplot.jinja2  tikzcd.jinja2  tikzpicture.jinja2  wrapfig.jinja2s
makeCourse/plastex/: __init__.py  amsthm.py  comment.py  enumitem.py  ifthen.py  macros.py  math.py  overrides.py  polynom.py  verbatim.py  xcolor.py
unittests/: __init__.py  basic.py  beamer.py  bibtex.py  caption.py  double_document.py  embed.py  enumerate.py  hyperref.py  ifplastex.py  images.py  latex_crash.py  latex_environments.py  maths.py  mdfigure.py  missing_source.py  notebook.py  pdf.py  pdf2svg.py  picture.py  placeins.py  proof.py  raisebox.py  refs.py  runnable_code.py  slash.py  slides.py  splitlevel.py  staticfile.py  structure.py  tcolorbox.py  theme_customisation.py  tikz.py  toc.py  unicode.py  util.py  verbatim.py  xcolor.py
unittests/basic/: config.yml  test.md
unittests/beamer/: test.tex
unittests/bibtex/: references.bib  test.tex
unittests/caption/: test.tex
unittests/double_document/: test.tex
unittests/embed/: absolute_url_config.yml  test.tex
unittests/enumerate/: test.tex
unittests/hyperref/: test.tex
unittests/ifplastex/: test.tex
unittests/images/: test.md  test.tex
unittests/latex_crash/: extra_brace.tex  no_end_document.tex  undefined_command.tex
unittests/latex_environments/: test.tex
unittests/maths/: config.yml  test.md  test.tex
unittests/mdfigure/: test.md
unittests/missing_source/: config.yml  incorrect_source.yml
unittests/notebook/: comments.md  config.yml
unittests/pdf/: config.yml  test.tex  (+1 more)
(+318 files in other folders)
