[project]
name = "chirun"
dynamic = ["version"]
authors = [
  { name="Digital Learning team, School of Mathematics, Statistics and Physics, Newcastle University", email="msp.digital.learning@ncl.ac.uk" },
  { name="George Stagg", email="george@stagg.phd"},
  { name="Christian Lawson-Perfect", email="christian.perfect@ncl.ac.uk"}
]
description = "Produce flexible and accessible course notes, in a variety of formats, using LaTeX or Markdown source"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "Babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "Jinja2==3.1.6",
    "Markdown==3.8",
    "pillow==12.0.0",
    "plasTeX @ git+https://github.com/christianp/plastex@chirun-running-fixes",
    "Pygments==2.19.1",
    "pymdown-extensions==10.15",
    "pyoembed==0.1.2",
    "pypdf==6.6.2",
    "pyppeteer==2.0.0",
    "pytest==8.4.0",
    "PyYAML==6.0.2",
]

[project.scripts]
chirun = "chirun:cli.main"

[project.urls]
Homepage = "https://chirun.org.uk"
Issues = "https://github.com/chirun-ncl/chirun/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  
include = ["chirun*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "chirun.chirun_version.VERSION"}
